infra/k8s/global-devsecops-intelligence/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: global-devsecops-intelligence
spec:
  selector:
    app: global-devsecops-intelligence
  ports:
    - name: http
      port: 8840
      targetPort: 8840
